--- a/TimeSheetApp/Server/appsettings.json
+++ b/TimeSheetApp/Server/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PREDATOR_PH315-\\SQLEXPRESS;Database=DatabaseTest;Integrated Security=True"
+    "DefaultConnection": "Server=PREDATOR_PH315-\\SQLEXPRESS;Database=TestDB_;Integrated Security=True"
   }
 }
